# MiSH-X

./: CMakeLists.txt  NewEnv.py  README.md  kindletool.py  requirements.txt  setup.py
ibn/: util.self.c
ibn/gblob/: main.py
lib/: LibUnix.pyx  core.c  core.h  globalpycpp.c  globalpycpp.pyx
lib/kindle/: kindle.cmake  openstd.c
lib/kindle/interface/: meson.build
lib/kindle/interface/src/: main.cpp
lib/kindle/script/: OpenKindle.sh
lib/runtime/: __init__.py
win32/: neo32.h  neowin32.c
